feat(session): simple session management; allow log out

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -2,3 +2,8 @@
 KINDE_CLIENT_ID=
 KINDE_CLIENT_SECRET=
 KINDE_DOMAIN=
+
+# Sinatra settings
+
+# generated using `rails secret` from another project
+SESSION_SECRET=
